--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@headlessui/react": "^2.2.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.2",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0"
   },
